Bug 1571230: Accept "inf" for infinity in wasmTextToBinary; r=jseward

Differential Revision: https://phabricator.services.mozilla.com/D40624