js/src/wasm/WasmTextToBinary.cpp
@@ -906,7 +906,7 @@ WasmToken WasmTokenStream::next() {
     case '+':
     case '-':
       cur_++;
-      if (consume(u"infinity")) {
+      if (consume(u"infinity") || consume(u"inf")) {
         return WasmToken(WasmToken::Infinity, begin, cur_);
       }
       if (consume(u"nan")) {
